MANVIR SANDBOX/src/objects/XACT_Object_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>SF_FieldName__c</fullName>
        <label>SF_FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Field_Display_Name__c</fullName>
        <label>SF_Field_Display_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_ObjectName__c</fullName>
        <label>SF_ObjectName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_RelationShip_Name__c</fullName>
        <label>SF_RelationShip_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>UserID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XI_FieldName__c</fullName>
        <label>XI_FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XI_Field_Label__c</fullName>
        <label>XI_Field_Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XI_ObjectName__c</fullName>
        <label>XI_ObjectName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Object Mapping</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>